바우처 조회 스트림 로직 간소화